--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,11 @@ anyio==3.6.1
 ariadne==0.16.1
 attrs==22.1.0
 autopep8==1.7.0
--e git+https://github.com/Marat5/cinema.git@3b3fbd2b89c8dbe1d2abab6e610946c0e096253b#egg=cinema&subdirectory=backend
+-e git+https://github.com/Marat5/cinema.git@ea0d34402b7b87f3bfa3d5e78a47991ff8a8a573#egg=cinema&subdirectory=backend
 click==8.1.3
 coverage==6.5.0
 Flask==2.2.2
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==3.0.0
 graphql-core==3.2.3
 idna==3.4
@@ -21,6 +22,7 @@ pycodestyle==2.9.1
 PyJWT==2.5.0
 pyparsing==3.0.9
 pytest==7.1.3
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 starlette==0.20.4
